--- a/index.html
+++ b/index.html
@@ -40,6 +40,30 @@
             <img class="tabs__image" src="./assets/images/tabs/Rectangle 111.png" alt="freedom" width="470px" height="500px">
         </div>
     </section>
+    <section class="awesome">
+        <h2 class="awesome__tittle">WHY THIS IS AWESOME</h2>
+        <hr color="#EC7979" width="170px">
+        <h5 class="awesome__tittle--description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+        <article class="awesome__about">
+            <img class="awesome__about--icon" src="./assets/images/awesome/about_icon_1.png" alt="img" height="170px" width="170px">
+            <h4 class="awesome__about--tittle">Thoughtful Design</h4>
+            <p class="awesome__about--text">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+        </article>
+        <article class="awesome__about">
+            <img class="awesome__about--icon" src="./assets/images/awesome/about_icon_2.png" alt="img" height="170px" width="170px">
+            <h4 class="awesome__about--tittle">Thoughtful Design</h4>
+            <p class="awesome__about--text">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+        </article>
+        <article class="awesome__about">
+            <img class="awesome__about--icon" src="./assets/images/awesome/about_icon_3.png" alt="img" height="170px" width="170px">
+            <h4 class="awesome__about--tittle">Thoughtful Design</h4>
+            <p class="awesome__about--text">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+        </article>
+
+    </section>
     
 </body>
 </html>
