--- a/index.html
+++ b/index.html
@@ -64,6 +64,52 @@
         </article>
 
     </section>
+    <section class="prices">
+        <div class="prices__info">
+            <h2 class="prices__tittle">PRICING OPTIONS</h2>
+            <hr color="#EC7979" width="170px">
+            <p class="prices__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="prices__options">
+                <ul class="prices__option__offers">
+                    <li class="price__option__tarif">Basic</li>
+                    <li class="price__option__cost">$10</li>
+                    <li class="price__option__free">Free for life</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                </ul>
+                <ul class="prices__option__offers active">
+                    <li class="price__option__tarif">Optima</li>
+                    <li class="price__option__cost">$20</li>
+                    <li class="price__option__free">Free for life</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                </ul>
+                <ul class="prices__option__offers">
+                    <li class="price__option__tarif">Pro</li>
+                    <li class="price__option__cost">$30</li>
+                    <li class="price__option__free">Free for life</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                    <li class="price__option">1 gb of space</li>
+                </ul>
+
+            </div>
+
+
+        </div>
+
+    </section>
     
 </body>
 </html>
