--- a/index.html
+++ b/index.html
@@ -110,6 +110,75 @@
         </div>
 
     </section>
+    <section class="reviews">
+        <div class="reviews__info">
+            <h2 class="reviews__info__tittle">what our customers are saying</h2>
+            <hr color="#EC7979" width="170px">
+            <p class="reviews__info__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="review__container">
+                <div class="review">
+                    <div class="review__subject">
+                        <p class="review__subject__text">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.</p>
+                        <img class="review__icon" src="./assets/images/reviews/Polygon 1.svg" alt="">
+                    </div>
+                    <div class="review__autor">
+                        <img class="review__autor__image" src="./assets/images/reviews/davis.png" alt="img" width="70px" height="70px">
+                        <div class="review__autor__name">
+                            <h4 class="review__autor__name__tittle">Davis Rhiel Madsen</h4>
+                            <p class="review__autor__name__subtittle">Manager</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review__subject">
+                        <p class="review__subject__text">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.</p>
+                            <img class="review__icon" src="./assets/images/reviews/Polygon 1.svg" alt="">
+                    </div>
+                    <div class="review__autor">
+                        <img class="review__autor__image" src="./assets/images/reviews/jaydon.png" alt="img" width="70px" height="70px">
+                        <div class="review__autor__name">
+                            <h4 class="review__autor__name__tittle">Jaydon Rosser</h4>
+                            <p class="review__autor__name__subtittle">Manager</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review__subject">
+                        <p class="review__subject__text">Lorem ipsum dolor sit amet, 
+                                consectetur adipisicing elit. Doloribus 
+                                accusamus expedita repellat similique 
+                                odio aspernatur ex, architecto eaque 
+                                quo suscipit.</p>
+                            <img class="review__icon" src="./assets/images/reviews/Polygon 1.svg" alt="">
+                    </div>
+                    <div class="review__autor">
+                        <img class="review__autor__image" src="./assets/images/reviews/cooper.png" alt="img" width="70px" height="70px">
+                        <div class="review__autor__name">
+                            <h4 class="review__autor__name__tittle">Cooper Dorwart</h4>
+                            <p class="review__autor__name__subtittle">Manager</p>
+                        </div>
+                    </div>
+                </div>    
+            </div>
+        </div>       
+    </section>
+    <section class="bunner">
+        <div class="bunner__container">
+            <h2 class="bunner__tittle">STYLISH AXURE DESIGN</h2>
+            <hr color="#FFFFFF" width="170px">
+            <p class="bunner__description">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+            <button class="bunner__btn" type="button">Download</button>
+        </div>
+
+    </section>
     
 </body>
 </html>
