--- a/index.html
+++ b/index.html
@@ -12,36 +12,39 @@
 </head>
 <body>
     <section class="tabs">
-        <ul class="tabs__menu">
-            <li>
-                <button class="tabs__menu--btn--active" type="button">TAB1</button>
-            </li>
-            <li>
-                <button class="tabs__menu--btn" type="button">TAB2</button>
-            </li>
-            <li>
-                <button class="tabs__menu--btn" type="button">TAB2</button>
-            </li>
-            <li class="empty"></li>
-        </ul>
-        <div class="tabs__info">
-            <article class="tabs__about">
-            <h2 class="tabs__about__tittle" style="margin: 0 0 69px;">Tabs with soft transitioning effect.</h2>
-            <p class="tabs__about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
-                bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
-                justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
-                penatibus et magnis dis parturient montes.<br>
-                <br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
-                bibendum laoreet.</p>
-                <button class="tabs__download" type="button">Download</button>
-
-            </article>
-            <img class="tabs__image" src="./assets/images/tabs/Rectangle 111.png" alt="freedom" width="470px" height="500px">
+        <div class="content">
+            <ul class="tabs__menu">
+                <li>
+                    <button class="tabs__menu--btn--active" type="button">TAB1</button>
+                </li>
+                <li>
+                    <button class="tabs__menu--btn" type="button">TAB2</button>
+                </li>
+                <li>
+                    <button class="tabs__menu--btn" type="button">TAB2</button>
+                </li>
+                <li class="empty"></li>
+            </ul>
+            <div class="tabs__info">
+                <article class="tabs__about">
+                <h2 class="tabs__about__tittle" style="margin: 0 0 69px;">Tabs with soft transitioning effect.</h2>
+                <p class="tabs__about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                    bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                    penatibus et magnis dis parturient montes.<br>
+                    <br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                    bibendum laoreet.</p>
+                    <button class="tabs__download" type="button">Download</button>
+    
+                </article>
+                <img class="tabs__image" src="./assets/images/tabs/Rectangle 111.png" alt="freedom" width="470px" height="500px">
+            </div>
         </div>
     </section>
     <section class="awesome">
-        <h2 class="awesome__tittle">WHY THIS IS AWESOME</h2>
+        <div class="content">
+            <h2 class="awesome__tittle">WHY THIS IS AWESOME</h2>
         <hr color="#EC7979" width="170px">
         <h5 class="awesome__tittle--description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
         <article class="awesome__about">
@@ -62,10 +65,10 @@
             <p class="awesome__about--text">Lorem ipsum dolor sit amet, consectetur adipiscing 
                 elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
         </article>
-
+        </div>
     </section>
     <section class="prices">
-        <div class="prices__info">
+        <div class="content">
             <h2 class="prices__tittle">PRICING OPTIONS</h2>
             <hr color="#EC7979" width="170px">
             <p class="prices__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -111,7 +114,7 @@
 
     </section>
     <section class="reviews">
-        <div class="reviews__info">
+        <div class="content">
             <h2 class="reviews__info__tittle">what our customers are saying</h2>
             <hr color="#EC7979" width="170px">
             <p class="reviews__info__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -170,12 +173,14 @@
             </div>
         </div>       
     </section>
-    <section class="bunner">
-        <div class="bunner__container">
-            <h2 class="bunner__tittle">STYLISH AXURE DESIGN</h2>
-            <hr color="#FFFFFF" width="170px">
-            <p class="bunner__description">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
-            <button class="bunner__btn" type="button">Download</button>
+    <section class="design">
+        <div class="content">
+            <div class="design__container">
+                <h2 class="design__tittle">STYLISH AXURE DESIGN</h2>
+                <hr color="#FFFFFF" width="170px">
+                <p class="design__description">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+                <button class="design__btn" type="button">Download</button>
+            </div>
         </div>
 
     </section>
