--- a/index.html
+++ b/index.html
@@ -35,7 +35,27 @@
             </nav>
         </div>
     </header>
-    
+    <section class="banner">
+        <div class="content">
+            <div class="banner__info">
+                <div class="banner__logo__container">
+                    <svg class="logo" width="53" height="32" viewBox="0 0 53 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10.6011 0.456055H16.1137L26.3906 31.1461H20.7993L18.2006 23.4952H8.43549L5.87609 31.1461H0.28479L10.6011 0.456055ZM17.2162 19.3023L13.3574 6.63729L9.34112 19.3023H17.2162Z" fill="white"/>
+                    <path d="M32.3708 0.456055L39.3008 11.7811L46.1915 0.456055H52.0978L42.4115 16.0172L51.7828 31.1461H45.8765L39.3008 20.2533L32.6858 31.1461H26.7401L36.1114 16.0172L26.4251 0.456055H32.3708Z" fill="white"/>
+                    </svg>
+                <svg class="logo" width="34" height="32" viewBox="0 0 34 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0.912598 31.1461V0.456055H6.3464V31.1461H0.912598Z" fill="#EC7979"/>
+                    <path d="M33.0875 5.68633H24.1493V31.1461H18.7549V5.68633H9.81665V0.456055H33.0875V5.68633Z" fill="#EC7979"/>
+                    </svg></div>
+                <h1 class="banner__tittle">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+                <hr class="banner__line" width="170px" color="#FFFFFF">
+                <p class="banner__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <button class="banner__button" type="button">Download</button>
+
+            </div>
+        </div>
+
+    </section>
     <section class="tabs">
         <div class="content">
             <ul class="tabs__menu">
