--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="content cont">
+        <div class="content box">
             <div class="logo__container">
                 <svg class="logo" width="53" height="32" viewBox="0 0 53 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10.6011 0.456055H16.1137L26.3906 31.1461H20.7993L18.2006 23.4952H8.43549L5.87609 31.1461H0.28479L10.6011 0.456055ZM17.2162 19.3023L13.3574 6.63729L9.34112 19.3023H17.2162Z" fill="white"/>
