--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h1 class="banner__tittle">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
                 <hr class="banner__line" width="170px" color="#FFFFFF">
                 <p class="banner__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                <button class="banner__button" type="button">Download</button>
+                <a class="banner__button" href="#">Download</a>
 
             </div>
         </div>
