--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                     <a href="#" class="nav__link">Contact</a>
                 </div>
             </nav>
+            <div class="header__menu">
+                <a href="#"><svg width="55" height="56" viewBox="0 0 55 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 19H40V22H16V19ZM16 26.5H40V29.5H16V26.5ZM16 34H40V37H16V34Z" fill="white"/>
+                    </svg></a>
+                    
+            </div>
         </div>
     </header>
     <section class="banner">
