add social adaptive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </svg>
 
             </div>
-            <nav>
+            <nav class="header__nav">
                 <div class="nav__links">
                     <a href="#" class="nav__link">features</a>
                     <a href="#" class="nav__link">About</a>
