add adaptive for awesome

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <section class="awesome">
         <div class="content">
             <h2 class="awesome__tittle">WHY THIS IS AWESOME</h2>
-        <hr color="#EC7979" width="170px">
+        <hr class="project__line" color="#EC7979" width="170px">
         <h5 class="awesome__tittle--description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
         <article class="awesome__about">
             <img class="awesome__about--icon" src="./assets/images/awesome/about_icon_1.png" alt="img" height="170px" width="170px">
