add adaptive for prices

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <section class="prices">
         <div class="content">
             <h2 class="prices__tittle">PRICING OPTIONS</h2>
-            <hr color="#EC7979" width="170px">
+            <hr class="project__line" color="#EC7979" width="170px">
             <p class="prices__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="prices__options">
                 <ul class="prices__option__offers">
