--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
     </section>
     <section class="prices">
-        <div class="content">
+        <div class="content prices__box">
             <h2 class="prices__tittle">PRICING OPTIONS</h2>
             <hr class="project__line" color="#EC7979" width="170px">
             <p class="prices__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -216,10 +216,10 @@
     <section class="reviews">
         <div class="content">
             <h2 class="reviews__info__tittle">what our customers are saying</h2>
-            <hr color="#EC7979" width="170px">
+            <hr class="project__line" color="#EC7979" width="170px">
             <p class="reviews__info__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="review__container">
-                <div class="review">
+                <div class="review switch s1">
                     <div class="review__subject">
                         <p class="review__subject__text">Lorem ipsum dolor sit amet, 
                                 consectetur adipisicing elit. Doloribus 
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="review">
+                <div class="review switch s2">
                     <div class="review__subject">
                         <p class="review__subject__text">Lorem ipsum dolor sit amet, 
                                 consectetur adipisicing elit. Doloribus 
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="review">
+                <div class="review switch s3">
                     <div class="review__subject">
                         <p class="review__subject__text">Lorem ipsum dolor sit amet, 
                                 consectetur adipisicing elit. Doloribus 
@@ -269,15 +269,20 @@
                             <p class="review__autor__name__subtittle">Manager</p>
                         </div>
                     </div>
-                </div>    
+                </div>
             </div>
+            <div class="review__switcher">
+                <input class="review__switch" type="radio" name="switch" id="r1" checked>
+                <input class="review__switch" type="radio" name="switch" id="r2">
+                <input class="review__switch" type="radio" name="switch" id="r3">
+            </div>    
         </div>       
     </section>
     <section class="design">
         <div class="content">
             <div class="design__container">
                 <h2 class="design__tittle">STYLISH AXURE DESIGN</h2>
-                <hr color="#FFFFFF" width="170px">
+                <hr class="project__line" color="#FFFFFF" width="170px">
                 <p class="design__description">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
                 <button class="design__btn" type="button">Download</button>
             </div>
