add adaptive for forms

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <section class="contact">
         <div class="content contact__box">
             <h2 class="contact__tittle">contact us</h2>
-            <hr color="#EC7979" width="170px">
+            <hr class="project__line" color="#EC7979" width="170px">
             <p class="contact__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <form class="contact__form">
                 <div class="user__info">
