--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     </section>
     <section class="reviews">
-        <div class="content">
+        <div class="content review__box">
             <h2 class="reviews__info__tittle">what our customers are saying</h2>
             <hr class="project__line" color="#EC7979" width="170px">
             <p class="reviews__info__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
